gateway-api/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: akkc-app-gateway
  namespace: akkc-gateway
spec:
  gatewayClassName: azure-alb-external

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      # allowedRoutes:
      #   namespaces:
      #     from: All
      
      # it is more secure to use Selector instead of All, so that only the selected namespaces can access the gateway
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
